--- a/debian/rules
+++ b/debian/rules
@@ -7,11 +7,13 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 %:
 	dh $@ --with autoreconf
 
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
+	@echo "remove RPATH"
+	chrpath --delete debian/tmp/usr/bin/pepcli
 
